--- a/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
+++ b/CheckYourEligibility-Admin/Views/Home/Cookies.cshtml
@@ -5,20 +5,38 @@
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-4">Cookies</h1>
 
-<p>Cookies are small files saved on your phone, tablet or computer when you visit a website.</p>
-<p>We use cookies to make 'Connect families to support' work and collect information about how you use this website.</p>
+<p>The Check if a child can get free school meals service puts small files (known as ‘cookies’) onto your computer to collect information about how you browse the site. </p>
 
-<h2 class="govuk-heading-m govuk-!-margin-top-6">Essential cookies</h2>
-
-<p class="govuk-body">Essential cookies:</p>
+<p>Cookies are used to:</p>
 <ul class="govuk-list govuk-list--bullet">
-    <li>keep your information secure while you use Connect families to support</li>
-    <li>help us understand how you use the website, so we can make improvements</li>
-    <li>temporarily store the selections you make</li>
-    <li>remember what notifications you've seen, so you're not shown them more than once</li>
+    <li>measure how you use the website so it can be updated and improved based on your needs</li>
+    <li>remember the notifications you’ve seen so that we don’t show them to you again</li>
+    <li>store various settings you have selected so they will be used when you return to the site.</li>
 </ul>
-<p>We do not need to ask permission to use them.</p>
 
+<p>GOV.UK cookies aren’t used to identify you personally. You’ll normally see a message on the site before we store a cookie on your computer.</p>
+
+<p>Find out more about <a href="http://www.aboutcookies.org/">how to manage cookies</a>. </p>
+
+<h2 class="govuk-heading-m govuk-!-margin-top-6">How cookies are used on this service</h2>
+
+<h2 class="govuk-heading-m govuk-!-margin-top-6">Measuring website usage (Google Analytics)</h2>
+
+<p>We use Google Analytics software to collect information about how you use GOV.UK. We do this to help make sure the site is meeting the needs of its users and to help us make improvements.</p>
+
+<p>Google Analytics stores information about:</p>
+<ul class="govuk-list govuk-list--bullet">
+    <li>the pages you visit on this service</li>
+    <li>how long you spend on each page</li>
+    <li>how you got to the site</li>
+    <li>what you click on while you’re visiting the site</li>
+</ul>
+
+<p>We don’t collect or store your personal information (for example, your name or address) so this information can’t be used to identify who you are.</p>
+
+<p>We don’t allow Google to use or share our analytics data. </p>
+
+<p>Google Analytics sets the following cookies: </p>
 <table class="govuk-table">
     <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -29,27 +47,27 @@
     </thead>
     <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell">service_directory_cookies_policy</td>
-            <td class="govuk-table__cell">Saves your cookie consent settings</td>
-            <td class="govuk-table__cell">1 year</td>
+            <td class="govuk-table__cell">_ga</td>
+            <td class="govuk-table__cell">Google Analytics sets the following cookies: </td>
+            <td class="govuk-table__cell">2 years</td>
         </tr>
         <tr class="govuk-table__row">
-            <td class="govuk-table__cell">.AspNetCore.Antiforgery.[random number]</td>
-            <td class="govuk-table__cell">Prevents malicious activity while you’re using the website</td>
-            <td class="govuk-table__cell">When you leave the website</td>
+            <td class="govuk-table__cell">_gid</td>
+            <td class="govuk-table__cell">This helps us count how many people visit GOV.UK by tracking if you’ve visited before </td>
+            <td class="govuk-table__cell">24 hours</td>
+        </tr>
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell">_ga_9YG8ESXR5Y</td>
+            <td class="govuk-table__cell">Used by Google Analytics to find and track an individual session with your device</td>
+            <td class="govuk-table__cell">2 years</td>
         </tr>
     </tbody>
 </table>
+<p>You can <a href="https://tools.google.com/dlpage/gaoptout">opt out of Google Analytics cookies</a>. </p>
 
-<h2 class="govuk-heading-m govuk-!-margin-top-6">Analytics cookies (optional)</h2>
-<p>With your permission, we use Google Analytics to collect data about how you use Connect families to support. This information helps us to improve our service.</p>
-<p>Google is not allowed to use or share our analytics data with anyone.</p>
-<p>Google Analytics stores anonymised information about:</p>
-<ul class="govuk-list govuk-list--bullet">
-    <li>how you got to Connect families to support</li>
-    <li>the pages you visit on Connect families to support and how long you spend on them</li>
-    <li>any errors you see while using Connect families to support</li>
-</ul>
+<h2 class="govuk-heading-m govuk-!-margin-top-6">Our introductory message </h2>
+
+<p>You may see a pop-up welcome message when you first visit GOV.UK. We’ll store a cookie so that your computer knows you’ve seen it and knows not to show it again. </p>
 
 <table class="govuk-table" aria-label="Cookies that measure website usage">
     <thead class="govuk-table__head">
@@ -68,24 +86,24 @@
     <tbody class="govuk-table__body">
         <tr>
             <td class="govuk-table__cell">
-                _ga
+                ees_banner_seen
             </td>
             <td class="govuk-table__cell">
-                Helps count how many people visit this site by tracking if you’ve visited before
+                Saves a message to let us know that you’ve seen our cookie message
             </td>
             <td class="govuk-table__cell">
-                2 years
+                1 year
             </td>
         </tr>
         <tr>
             <td class="govuk-table__cell">
-                _ga_[random number]
+                ees_user_testing_banner_seen
             </td>
             <td class="govuk-table__cell">
-                Generates statistics about how you use the website
+                Saves a message to let us know that you’ve seen our user testing invite message
             </td>
             <td class="govuk-table__cell">
-                2 years
+                1 year
             </td>
         </tr>
     </tbody>
@@ -93,33 +111,121 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">Change your cookie settings</h2>
-        <form method="post" class="js-cookies-page-form" novalidate="">
-            <div class="govuk-form-group">
-                <fieldset class="govuk-fieldset js-cookies-page-form-fieldset" id="analytics">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                        Do you want to accept analytics cookies?
-                    </legend>
-                    <div class="govuk-radios" data-module="govuk-radios">
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="analytics-cookies-yes" name="analytics" type="radio" value="true">
-                            <label class="govuk-label govuk-radios__label" for="analytics-cookies-yes">
-                                Yes
-                            </label>
-                        </div>
-                        <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="analytics-cookies-no" name="analytics" type="radio" value="false" checked="">
-                            <label class="govuk-label govuk-radios__label" for="analytics-cookies-no">
-                                No
-                            </label>
-                        </div>
-                    </div>
-                </fieldset>
-            </div>
-            <button class="govuk-button js-cookies-form-button" data-module="govuk-button">
-                Save cookie settings
-            </button>
-            <input name="__RequestVerificationToken" type="hidden" value="CfDJ8DhiDDhPVfJAmQYKTI1c_nzy9aR1Bca6WIENRtR3YId7eNQs2HE5BN_t4uriq1tJx1UgCyxaS9-jUy7z_8v0z2vYYAAlwsVaQY7AvX45vtNrICDdDJ2U1NhkWoswstYaYJqaHAEflYXNaSl_tJZTvlg">
-        </form>
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Your cookie settings</h2>
+
+        <p>We will store your cookie settings as a cookie, so that they remain if you return to GOV.UK: Explore education statistics. </p>
+
+        <table class="govuk-table" aria-label="Cookies that measure website usage">
+            <thead class="govuk-table__head">
+                <tr>
+                    <th scope="col" class="govuk-table__header">
+                        Name
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Purpose
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Expires
+                    </th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr>
+                    <td class="govuk-table__cell">
+                        ees_disable_google_analytics
+                    </td>
+                    <td class="govuk-table__cell">
+                        Disables Google Analytics tracking
+                    </td>
+                    <td class="govuk-table__cell">
+                        10 years
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <p>You can <a href="https://explore-education-statistics.service.gov.uk/cookies">change which cookies you're happy for us to use</a>.</p>
+    </div>
+</div>
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Microsoft Application Insights </h2>
+
+        <p>Microsoft Application Insights collects telemetry information. </p>
+
+        <table class="govuk-table" aria-label="Cookies that measure website usage">
+            <thead class="govuk-table__head">
+                <tr>
+                    <th scope="col" class="govuk-table__header">
+                        Name
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Purpose
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Expires
+                    </th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr>
+                    <td class="govuk-table__cell">
+                        ai_user
+                    </td>
+                    <td class="govuk-table__cell">
+                        Used to identify returning users
+                    </td>
+                    <td class="govuk-table__cell">
+                        1 year
+                    </td>
+                </tr>
+                <tr>
+                    <td class="govuk-table__cell">
+                        ai_sessionx
+                    </td>
+                    <td class="govuk-table__cell">
+                        Anonymous session identifer to group a user's activities
+                    </td>
+                    <td class="govuk-table__cell">
+                        15 minutes
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <h2 class="govuk-heading-m govuk-!-margin-top-6">Check if a child can get free school meals - Cookies</h2>
+
+        <p>These cookies are specific to this service. </p>
+
+        <table class="govuk-table" aria-label="Cookies that measure website usage">
+            <thead class="govuk-table__head">
+                <tr>
+                    <th scope="col" class="govuk-table__header">
+                        Name
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Purpose
+                    </th>
+                    <th scope="col" class="govuk-table__header">
+                        Expires
+                    </th>
+                </tr>
+            </thead>
+            <tbody class="govuk-table__body">
+                <tr>
+                    <td class="govuk-table__cell">
+                    </td>
+                    <td class="govuk-table__cell">
+                    </td>
+                    <td class="govuk-table__cell">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
