--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewData["Title"] = "Provide details of your children";
     ViewData["ServiceName"] = "Check a family's eligibility";
-}
+    var childIndex = TempData["childIndexTest"] as int?;
+    }
 
 @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
@@ -13,6 +14,7 @@
     ViewData["Title"] = "Error: Check Details";
     <partial name="_ValidationSummary" model="ViewData.ModelState" />
 }
+
 
 <h1 class="govuk-heading-l" tabindex="-1">
     Provide details of your children
@@ -44,8 +46,14 @@
                 <p class="govuk-error-message">
                     <span asp-validation-for="ChildList[i].FirstName"></span>
                 </p>
-
-                <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="First name">
+                   
+                    @if (childIndex ==i)
+                    {
+                        <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="First name" autofocus/>
+                    } else 
+                    {
+                       <input asp-for="ChildList[i].FirstName" id="ChildList[@i].FirstName" class="govuk-input govuk-!-width-two-thirds" type="text" aria-label="First name"/>
+                    }
             </div>
 
             <div class="govuk-form-group">
