--- a/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Enter_Child_Details.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Provide details of your children";
     ViewData["ServiceName"] = "Check a family's eligibility";
-    var childIndex = TempData["childIndexTest"] as int?;
+    var childIndex = TempData["childIndex"] as int?;
     }
 
 @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
@@ -23,7 +23,7 @@
 <p>Include all your children who are in compulsory education. You can use the add another option, if you have more than one child.</p>
 
 <form asp-controller="Check" asp-action="Enter_Child_Details" method="post" novalidate>
-   <input type="hidden" id="ChildIndex"value="@Model.ChildIndex" />
+   <input type="hidden" id="ChildIndex" />
 
     @for (int i = 0; i < Model.ChildList.Count; i++)
     {
