--- a/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/PendingApplications.cshtml
@@ -1,30 +1,31 @@
 ﻿@using CheckYourEligibility_FrontEnd.ViewModels
 @model PeopleSelectionViewModel;
 
+@{
+    ViewData["Layout"] = "full";
+}
+
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
 
+<div class="moj-page-header-actions">
+    <div class="moj-page-header-actions__title">
+        <h1 class="govuk-heading-l">Pending applications (@ViewBag.TotalRecords)</h1>
+    </div>
+</div>
+<details class="govuk-details">
+    <summary class="govuk-details__summary">
+        <span class="govuk-details__summary-text">
+            Help with this page
+        </span>
+    </summary>
+    <div class="govuk-details__text">
+        This page contains applications for free school meals that couldn't be found in the system. Review any supporting evidence parents or guardians have provided, then approve or decline to process their applications.
+    </div>
+</details>
+<div class="govuk-!-padding-bottom-3"></div>
+
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-        <div class="moj-page-header-actions">
-
-            <div class="moj-page-header-actions__title">
-                <h1 class="govuk-heading-l">Pending applications (@ViewBag.TotalRecords)</h1>
-            </div>
-        </div>
-        <details class="govuk-details">
-            <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                    Help with this page
-                </span>
-            </summary>
-            <div class="govuk-details__text">
-                This page contains applications for free school meals that couldn't be found in the system. Review any supporting evidence parents or guardians have provided, then approve or decline to process their applications.
-            </div>
-        </details>
-        <div class="govuk-!-padding-bottom-3"></div>
-
-        <div class="govuk-grid-row">
 
             <div class="govuk-grid-column-full">
                 <table class="govuk-table">
@@ -50,22 +51,20 @@
                             </li>
                         }
 
-                        @for (int i = 1; i <= ViewBag.TotalPages; i++)
-                        {
-                            <li class="govuk-pagination__item @(ViewBag.CurrentPage == i ? "govuk-pagination__item--current" : "")">
-                                <a class="govuk-link govuk-pagination__link" href="@Url.Action("PendingApplications", new { PageNumber = i })">@i</a>
-                            </li>
-                        }
+                @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                {
+                    <li class="govuk-pagination__item @(ViewBag.CurrentPage == i ? "govuk-pagination__item--current" : "")">
+                        <a class="govuk-link govuk-pagination__link" href="@Url.Action("PendingApplications", new { PageNumber = i })">@i</a>
+                    </li>
+                }
 
-                        @if (ViewBag.CurrentPage < ViewBag.TotalPages)
-                        {
-                            <li class="govuk-pagination__item">
-                                <a class="govuk-link govuk-pagination__link" href="@Url.Action("PendingApplications", new { PageNumber = ViewBag.CurrentPage + 1 })">Next</a>
-                            </li>
-                        }
-                    </ul>
-                </nav>
-            </div>
-        </div>
+                @if (ViewBag.CurrentPage < ViewBag.TotalPages)
+                {
+                    <li class="govuk-pagination__item">
+                        <a class="govuk-link govuk-pagination__link" href="@Url.Action("PendingApplications", new { PageNumber = ViewBag.CurrentPage + 1 })">Next</a>
+                    </li>
+                }
+            </ul>
+        </nav>
     </div>
 </div>
