--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -2,25 +2,26 @@
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" data-type="Not_Eligible_LA">
-    <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
-        <div class="govuk-notification-banner__header">
-            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                May not be eligible
-            </h2>
-        </div>
-        <div class="govuk-notification-banner__content">
-            <p class="govuk-notification-banner__heading">
-                The children of this parent or guardian may not be eligible for free school meals.
-            </p>
-            <p class="govuk-body">The parent or guardian can appeal, but you’ll need to review their supporting evidence.</p>
+<div class="govuk-grid-row">
+    <div id="content" class="govuk-grid-column-two-thirds" data-type="Not_Eligible_LA">
+        <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
+            <div class="govuk-notification-banner__header">
+                <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                    May not be eligible
+                </h2>
+            </div>
+            <div class="govuk-notification-banner__content">
+                <p class="govuk-notification-banner__heading">
+                    The children of this parent or guardian may not be eligible for free school meals.
+                </p>
+                <p class="govuk-body">The parent or guardian can appeal, but you’ll need to review their supporting evidence.</p>
 
+            </div>
         </div>
-    </div>
 
-    <h1 class="govuk-heading-l">Review supporting evidence</h1>
-    <p class="govuk-body">If the parent appeals, you’ll need to review their supporting evidence.</p>
-    <p class="govuk-body"><a class="govuk-link" rel="noreferrer noopener" target="_blank" href="~/Home/Guidance">See a complete list of acceptable evidence (opens in new tab)</a>.</p>
+        <h1 class="govuk-heading-l">Review supporting evidence</h1>
+        <p class="govuk-body">If the parent appeals, you’ll need to review their supporting evidence.</p>
+        <p class="govuk-body"><a class="govuk-link" rel="noreferrer noopener" target="_blank" href="~/Home/Guidance">See a complete list of acceptable evidence (opens in new tab)</a>.</p>
 
     <h2 class="govuk-heading-m">If you have not received any evidence</h2>
     <p class="govuk-body">You can either:</p>
@@ -29,5 +30,6 @@
         <li>the <a href="@Configuration["ContactUsUrl"]"> for Education support desk</a> to request a separate check</li>
     </ul>
 
-    <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
+        <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
+    </div>
 </div>
