--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -24,10 +24,10 @@
         <p class="govuk-body"><a class="govuk-link" rel="noreferrer noopener" target="_blank" href="~/Home/Guidance">See a complete list of acceptable evidence (opens in new tab)</a>.</p>
 
     <h2 class="govuk-heading-m">If you have not received any evidence</h2>
-    <p class="govuk-body">You can either:</p>
+    <p class="govuk-body">You can either contact:</p>
     <ul class="govuk-list govuk-list--bullet">
-        <li>contact the relevant school to ask them to collect it from the parent or guardian</li>
-        <li>the <a href="@Configuration["ContactUsUrl"]"> for Education support desk</a> to request a separate check</li>
+        <li> the relevant school to ask them to collect it from the parent or guardian</li>
+        <li>the <a href="@Configuration["ContactUsUrl"]"> Department for Education support desk</a> to request a separate check</li>
     </ul>
 
         <p>@Html.ActionLink("Return to dashboard", "Index", "Home")</p>
